--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: penevl@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Just a simple website for me to screw around in Jekyll and to see what I can create and to also learn.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://http://127.0.0.1:4000/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  penevl
 
 # Build settings
